Do not hold a collection lock while failing a background index build on secondaries

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.7
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Storage NYC 2018-12-31
    • 31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a background index build fails on a secondary during a collection scan, we hold a collection lock while trying to re-lock a database X lock.

      This is problematic on non-document-locking storage engines, which can introduce a deadlock when multiple index builds are all canceled at the same time (like shutdown).

            Assignee:
            Eric Milkie
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: