SERVER-38712 do not hold collection lock while failing a bg index build on secondaries